argocd/base/ui-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: ui-service
  labels:
    app: ui-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-service
  template:
    metadata:
      labels:
        app: ui-service
    spec:
      containers:
        - name: ui-service
          image: DOCKERHUB_USERNAME/ui-service:latest
          ports:
            - containerPort: 80
