argocd/base/ui-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  labels:
    app: ui-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: ui-service
