argocd/base/ui-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: e-shop.info
      http:
        paths:
          - path: /ui
            pathType: Prefix
            backend:
              service:
                name: ui-service
                port:
                  number: 80
